WIP: Placeholder commit with the first two tabs flushed out beyond modals.

--- a/islandora_solr.links.menu.yml
+++ b/islandora_solr.links.menu.yml
@@ -1,4 +1,5 @@
 islandora_solr.admin_index_settings:
   route_name: islandora_solr.admin_index_settings
+  parent: islandora.admin_config
   title: 'Solr index'
   description: 'Configure Solr index.'
