--- a/config/install/islandora_solr.settings.yml
+++ b/config/install/islandora_solr.settings.yml
@@ -39,3 +39,5 @@ islandora_solr_allow_preserve_filters: false
 islandora_solr_advanced_search_block_lucene_syntax_escape: false
 islandora_solr_base_advanced: false
 islandora_solr_breadcrumbs_parent_fields: "RELS_EXT_isMemberOfCollection_uri_ms\r\nRELS_EXT_isMemberOf_uri_ms"
+islandora_solr_primary_display_table: []
+islandora_solr_secondary_display: []
