--- a/config/install/islandora_solr.settings.yml
+++ b/config/install/islandora_solr.settings.yml
@@ -41,3 +41,4 @@ islandora_solr_base_advanced: false
 islandora_solr_breadcrumbs_parent_fields: "RELS_EXT_isMemberOfCollection_uri_ms\r\nRELS_EXT_isMemberOf_uri_ms"
 islandora_solr_primary_display_table: []
 islandora_solr_secondary_display: []
+islandora_solr_num_of_results_advanced: []
