--- a/islandora_solr_config/islandora_solr_config.links.task.yml
+++ b/islandora_solr_config/islandora_solr_config.links.task.yml
@@ -1,6 +1,8 @@
 islandora_solr_config.admin_rss_settings:
   route_name: islandora_solr_config.admin_rss_settings
   title: 'RSS settings'
+  base_route: islandora_solr.admin_index_settings
 islandora_solr_config.admin_table_profile_settings:
   route_name: islandora_solr_config.admin_table_profile_settings
   title: 'Table Profile Settings'
+  base_route: islandora_solr.admin_index_settings
