--- a/islandora_solr.libraries.yml
+++ b/islandora_solr.libraries.yml
@@ -2,4 +2,4 @@ islandora-solr-admin:
   version: 1.x
   css:
     base:
-      css/islandora_solr.admin.css {}
+      css/islandora_solr.admin.css: {}
