adding a missing default

--- a/config/install/islandora_solr.settings.yml
+++ b/config/install/islandora_solr.settings.yml
@@ -37,6 +37,7 @@ islandora_solr_facet_soft_limit: '10'
 islandora_solr_search_boolean: user
 islandora_solr_allow_preserve_filters: false
 islandora_solr_advanced_search_block_lucene_syntax_escape: false
+islandora_solr_advanced_search_block_lucene_regex_default: '/(\+|-|&&|\|\||!|\(|\)|\{|\}|\[|\]|\^| |~|\*|\?|\:|"|\\\\|\\/)/'
 islandora_solr_base_advanced: false
 islandora_solr_breadcrumbs_parent_fields: "RELS_EXT_isMemberOfCollection_uri_ms\r\nRELS_EXT_isMemberOf_uri_ms"
 islandora_solr_primary_display_table: []
