--- a/islandora_solr.routing.yml
+++ b/islandora_solr.routing.yml
@@ -26,10 +26,11 @@ islandora_solr.admin_breadcrumbs_settings:
     _form: \Drupal\islandora_solr\Form\IslandoraSolrAdminBreadcrumbsSettings
   requirements:
     _permission: 'administer islandora solr'
-islandora_solr.admin_settings_field:
+islandora_solr.configure_field:
   path: /islandora_solr/field
   defaults:
-    _title: 'Result field'
+    _title: 'Configure field'
+    _form: \Drupal\islandora_solr\Form\IslandoraSolrConfigureField
   requirements:
     _permission: 'administer islandora solr'
 islandora_solr.autocomplete_luke:
