--- a/islandora_solr.routing.yml
+++ b/islandora_solr.routing.yml
@@ -27,28 +27,28 @@ islandora_solr.admin_breadcrumbs_settings:
   requirements:
     _permission: 'administer islandora solr'
 islandora_solr.configure_result_field:
-  path: /islandora_solr/result_field
+  path: /islandora_solr/result_field/{solr_field}
   defaults:
     _title: 'Configure field'
     _form: \Drupal\islandora_solr\Form\IslandoraSolrConfigureResultField
   requirements:
     _permission: 'administer islandora solr'
 islandora_solr.configure_search_field:
-  path: /islandora_solr/search_field
+  path: /islandora_solr/search_field/{solr_field}
   defaults:
     _title: 'Configure field'
     _form: \Drupal\islandora_solr\Form\IslandoraSolrConfigureSearchField
   requirements:
     _permission: 'administer islandora solr'
 islandora_solr.configure_facet_field:
-  path: /islandora_solr/facet_field
+  path: /islandora_solr/facet_field/{solr_field}
   defaults:
     _title: 'Configure field'
     _form: \Drupal\islandora_solr\Form\IslandoraSolrConfigureFacetField
   requirements:
     _permission: 'administer islandora solr'
 islandora_solr.configure_sort_or_search_field:
-  path: /islandora_solr/sort_field
+  path: /islandora_solr/sort_or_field/{field_type}/{solr_field}
   defaults:
     _title: 'Configure field'
     _form: \Drupal\islandora_solr\Form\IslandoraSolrConfigureSortOrSearchField
