truncation js working

--- a/islandora_solr.libraries.yml
+++ b/islandora_solr.libraries.yml
@@ -16,3 +16,9 @@ facets-js:
     - core/jquery
     - core/drupalSettings
     - core/drupal
+toggle:
+  js:
+    js/truncation-toggle.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
