fancy facets WIP

--- a/islandora_solr.libraries.yml
+++ b/islandora_solr.libraries.yml
@@ -22,3 +22,12 @@ toggle:
   dependencies:
     - core/jquery
     - core/drupal
+slider:
+  js:
+    js/flot/jquery.flot.min.js: {}
+    js/islandora_solr_facets.js: {}
+  dependencies:
+    - core/jquery.ui.slider
+    - core/drupalSettings
+    - core/jquery
+    - core/drupal
