--- a/islandora_solr.info.yml
+++ b/islandora_solr.info.yml
@@ -1,6 +1,6 @@
 name: 'Islandora Solr'
 dependencies:
-  - islandora
+  - :islandora
 description: 'Searches an Islandora Solr index'
 package: 'Islandora Search'
 core: 8.x
