--- a/islandora_solr_config/islandora_solr_config.info.yml
+++ b/islandora_solr_config/islandora_solr_config.info.yml
@@ -1,7 +1,7 @@
 name: 'Islandora Solr display profiles'
 description: 'Display profiles for Islandora Solr (Grid, Table and CSV).'
 dependencies:
-  - islandora_solr
+  - :islandora_solr
 package: 'Islandora Search'
 core: 8.x
 php: '5.5.9'
