--- a/islandora_solr.info.yml
+++ b/islandora_solr.info.yml
@@ -3,6 +3,7 @@ dependencies:
   - :islandora
 description: 'Searches an Islandora Solr index'
 package: 'Islandora Search'
+configure: islandora_solr.admin_index_settings
 core: 8.x
 php: '5.5.9'
 type: module
