Add islandora_compound_object dependency for solr backend route
Turns out we don't need to do anything crazy like a route subscriber
to alter the route collection after all. Drupal 8 is nice.

--- a/islandora_solr.routing.yml
+++ b/islandora_solr.routing.yml
@@ -61,4 +61,5 @@ islandora_solr.compound_object:
     _title: 'Settings form for compound object backend'
     _form: \Drupal\islandora_solr\Form\CompoundBackendAdmin
   requirements:
+    _module_dependencies: islandora_compound_object
     _permission: 'administer compound relationships'
