remove sample fields

--- a/config/install/islandora_solr.fields.yml
+++ b/config/install/islandora_solr.fields.yml
@@ -1,16 +1,4 @@
-result_fields:
-  fgs_label_ms:
-    solr_field: 'fgs_label_ms'
-    label: 'Label'
-    weight: 1
-  dc_description:
-    solr_field: 'dc.description'
-    label: 'Description'
-    weight: 2
-sort_fields:
-  fgs_label_ms:
-    solr_field: 'fgs_label_ms'
-    label: 'Label'
-    weight: 1
+result_fields: []
+sort_fields: []
 facet_fields: []
 search_fields: []
