--- a/islandora_solr.info.yml
+++ b/islandora_solr.info.yml
@@ -1,7 +1,7 @@
 name: 'Islandora Solr'
 dependencies:
   - :islandora
-description: 'Searches an Islandora Solr index'
+description: 'Searches an Islandora Solr index.'
 package: 'Islandora Search'
 configure: islandora_solr.admin_index_settings
 core: 8.x
